k8s/tooling/librespeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed
  labels:
    app: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librespeed
  template:
    metadata:
      labels:
        app: librespeed
    spec:
      containers:
        - name: librespeed
          image: lscr.io/linuxserver/librespeed:latest
          volumeMounts:
            - mountPath: /config
              name: config

      volumes:
        - name: config
          nfs:
            server: 192.168.100.61
            path: /mnt/fast-pool1/docker-configs/librespeed
