k8s/tooling/librespeed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librespeed
spec:
  rules:
    - host: "librespeed.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: librespeed-service
                port:
                  number: 8083
